# CuruenoPormaWarbot

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  event.py  listaEventos.py  listaPersonas.py  listaPueblos.py  main.py  persona.py  pueblo.py  pyproject.toml  run_api.sh  twitter_handler.py  warbot.py
curueno_porma_warbot/: manager.py  model.py  twitter_handler.py  warbot.py
curueno_porma_warbot/database/: manager.py  model.py  schema.py
curueno_porma_warbot/exchangers/: common.py
curueno_porma_warbot/exchangers/csv/: handler.py
curueno_porma_warbot/utils/: config.py  error.py  log.py
src/: managers.py  model.py  twitter_handler.py  warbot.py
src/utils/: config.py  log.py
tests/: test.py
